fixtures/semantic/invalid/recovery/broken-class.php
<?php
class Prompt33BrokenClass
{
    public function broken(
}
